支持昆仑万维天工大模型 (#2166)
---------

Co-authored-by: Eden <chuangqi.huang@ubtrobot.com>
Co-authored-by: liunux4odoo <liunux@qq.com>

--- a/configs/server_config.py.example
+++ b/configs/server_config.py.example
@@ -120,6 +120,9 @@ FSCHAT_MODEL_WORKERS = {
     "azure-api": {
         "port": 21008,
     },
+    "tiangong-api": {
+        "port": 21009,
+    },
 }
 
 # fastchat multi model worker server
