--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ xformers>=0.0.22.post4
 openai>=0.28.1
 sentence_transformers
 transformers>=4.34
-torch>=2.0.1 # 推荐2.1
+torch>=2.0.1 # suggest version 2.1
 torchvision
 torchaudio
 fastapi>=0.104
@@ -58,5 +58,5 @@ streamlit-option-menu>=0.3.6
 streamlit-antd-components>=0.1.11
 streamlit-chatbox>=1.1.11
 streamlit-aggrid>=0.3.4.post3
-httpx[brotli,http2,socks]>=0.25.0
+httpx~=0.24.0
 watchdog
