--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -7,7 +7,7 @@ xformers>=0.0.22.post4
 openai>=0.28.1
 sentence_transformers
 transformers>=4.34
-torch>=2.0.1 # 推荐2.1
+torch>=2.0.1 # suggest version 2.1
 torchvision
 torchaudio
 fastapi>=0.104
