--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,9 @@ xformers>=0.0.22.post7
 openai~=0.28.1
 sentence_transformers
 transformers>=4.35.2
-torch==2.1.0
-torchvision
-torchaudio
+torch==2.1.0 ##on win,  install the cuda version manually if you want use gpu
+torchvision #on win,  install the cuda version manually if you want use gpu
+torchaudio #on win,  install the cuda version manually if you want use gpu
 fastapi>=0.104
 nltk>=3.8.1
 uvicorn~=0.23.1
@@ -54,7 +54,7 @@ vllm==0.2.2; sys_platform == "linux"
 
 # WebUI requirements
 
-streamlit~=1.28.2
+streamlit~=1.28.2 # # on win, make sure write its path in environment variable
 streamlit-option-menu>=0.3.6
 streamlit-antd-components>=0.2.3
 streamlit-chatbox>=1.1.11
