--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 # API requirements
 
-langchain>=0.0.334 
+langchain>=0.0.342
 langchain-experimental>=0.0.42
 fschat[model_worker]>=0.2.33
 xformers>=0.0.22.post7
-openai~=0.28.1
+openai>=1.3.5
 sentence_transformers
 transformers>=4.35.2
 torch==2.1.0 ##on win,  install the cuda version manually if you want use gpu
