--- a/requirements_lite.txt
+++ b/requirements_lite.txt
@@ -1,8 +1,8 @@
-langchain>=0.0.334 
-fschat>=0.2.32
-openai
+langchain>=0.0.342
+fschat>=0.2.33
+openai>=1.3.5
 # sentence_transformers
-# transformers>=4.35.0
+# transformers>=4.35.2
 # torch>=2.0.1
 # torchvision
 # torchaudio
