--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -15,7 +15,7 @@ nltk>=3.8.1
 uvicorn~=0.23.1
 starlette~=0.27.0
 pydantic<2
-unstructured[all-docs]>=0.11.0
+unstructured[all-docs]==0.11.0
 python-magic-bin; sys_platform == 'win32'
 SQLAlchemy==2.0.19
 faiss-cpu
