--- a/requirements_lite.txt
+++ b/requirements_lite.txt
@@ -12,7 +12,7 @@ nltk~=3.8.1
 uvicorn~=0.23.1
 starlette~=0.27.0
 pydantic~=1.10.11
-unstructured[docx,csv]>=0.10.4 # add pdf if need
+unstructured[docx,csv]==0.11.0 # add pdf if need
 python-magic-bin; sys_platform == 'win32'
 SQLAlchemy==2.0.19
 faiss-cpu
