--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -115,7 +115,7 @@ ONLINE_LLM_MODEL = {
 
     # 昆仑万维天工 API https://model-platform.tiangong.cn/
     "tiangong-api": {
-        "version":"SkyChat-MegaVerse",
+        "version": "SkyChat-MegaVerse",
         "api_key": "",
         "secret_key": "",
         "provider": "TianGongWorker",
@@ -166,9 +166,9 @@ MODEL_PATH = {
         "chatglm3-6b-base": "THUDM/chatglm3-6b-base",
 
         "Qwen-1_8B": "Qwen/Qwen-1_8B",
-        "Qwen-1_8B-Chat":"Qwen/Qwen-1_8B-Chat",
-        "Qwen-1_8B-Chat-Int8":"Qwen/Qwen-1_8B-Chat-Int8",
-        "Qwen-1_8B-Chat-Int4":"Qwen/Qwen-1_8B-Chat-Int4",
+        "Qwen-1_8B-Chat": "Qwen/Qwen-1_8B-Chat",
+        "Qwen-1_8B-Chat-Int8": "Qwen/Qwen-1_8B-Chat-Int8",
+        "Qwen-1_8B-Chat-Int4": "Qwen/Qwen-1_8B-Chat-Int4",
 
         "Qwen-7B": "Qwen/Qwen-7B",
         "Qwen-7B-Chat": "Qwen/Qwen-7B-Chat",
@@ -180,8 +180,8 @@ MODEL_PATH = {
 
         "Qwen-72B": "Qwen/Qwen-72B",
         "Qwen-72B-Chat": "Qwen/Qwen-72B-Chat",
-        "Qwen-72B-Chat-Int8":"Qwen/Qwen-72B-Chat-Int8"
-        "Qwen-72B-Chat-Int4":"Qwen/Qwen-72B-Chat-Int4"
+        "Qwen-72B-Chat-Int8": "Qwen/Qwen-72B-Chat-Int8",
+        "Qwen-72B-Chat-Int4": "Qwen/Qwen-72B-Chat-Int4",
 
         "baichuan2-13b": "baichuan-inc/Baichuan2-13B-Chat",
         "baichuan2-7b": "baichuan-inc/Baichuan2-7B-Chat",
@@ -254,11 +254,11 @@ VLLM_MODEL_DICT = {
     "BlueLM-7B-Chat-32k": "vivo-ai/BlueLM-7B-Chat-32k",
 
     # 注意：bloom系列的tokenizer与model是分离的，因此虽然vllm支持，但与fschat框架不兼容
-    # "bloom":"bigscience/bloom",
-    # "bloomz":"bigscience/bloomz",
-    # "bloomz-560m":"bigscience/bloomz-560m",
-    # "bloomz-7b1":"bigscience/bloomz-7b1",
-    # "bloomz-1b7":"bigscience/bloomz-1b7",
+    # "bloom": "bigscience/bloom",
+    # "bloomz": "bigscience/bloomz",
+    # "bloomz-560m": "bigscience/bloomz-560m",
+    # "bloomz-7b1": "bigscience/bloomz-7b1",
+    # "bloomz-1b7": "bigscience/bloomz-1b7",
 
     "internlm-7b": "internlm/internlm-7b",
     "internlm-chat-7b": "internlm/internlm-chat-7b",
@@ -286,9 +286,9 @@ VLLM_MODEL_DICT = {
     "opt-iml-max-30b": "facebook/opt-iml-max-30b",
 
     "Qwen-1_8B": "Qwen/Qwen-1_8B",
-    "Qwen-1_8B-Chat":"Qwen/Qwen-1_8B-Chat",
-    "Qwen-1_8B-Chat-Int8":"Qwen/Qwen-1_8B-Chat-Int8",
-    "Qwen-1_8B-Chat-Int4":"Qwen/Qwen-1_8B-Chat-Int4",
+    "Qwen-1_8B-Chat": "Qwen/Qwen-1_8B-Chat",
+    "Qwen-1_8B-Chat-Int8": "Qwen/Qwen-1_8B-Chat-Int8",
+    "Qwen-1_8B-Chat-Int4": "Qwen/Qwen-1_8B-Chat-Int4",
 
     "Qwen-7B": "Qwen/Qwen-7B",
     "Qwen-7B-Chat": "Qwen/Qwen-7B-Chat",
@@ -300,8 +300,8 @@ VLLM_MODEL_DICT = {
 
     "Qwen-72B": "Qwen/Qwen-72B",
     "Qwen-72B-Chat": "Qwen/Qwen-72B-Chat",
-    "Qwen-72B-Chat-Int8":"Qwen/Qwen-72B-Chat-Int8"
-    "Qwen-72B-Chat-Int4":"Qwen/Qwen-72B-Chat-Int4"
+    "Qwen-72B-Chat-Int8": "Qwen/Qwen-72B-Chat-Int8",
+    "Qwen-72B-Chat-Int4": "Qwen/Qwen-72B-Chat-Int4",
 
     "agentlm-7b": "THUDM/agentlm-7b",
     "agentlm-13b": "THUDM/agentlm-13b",
