--- a/requirements_lite.txt
+++ b/requirements_lite.txt
@@ -1,23 +1,21 @@
-langchain==0.0.343
+langchain==0.0.344
+pydantic==1.10.13
 fschat>=0.2.33
-openai>=1.3.5
-# sentence_transformers
-# transformers>=4.35.2
-# torch>=2.0.1
-# torchvision
-# torchaudio
+openai>=1.3.6
 fastapi>=0.104.1
 python-multipart
 nltk~=3.8.1
-uvicorn~=0.23.1
+uvicorn>=0.24.0.post1
 starlette~=0.27.0
-pydantic~=1.10.11
 unstructured[docx,csv]==0.11.0 # add pdf if need
 python-magic-bin; sys_platform == 'win32'
 SQLAlchemy==2.0.19
+numexpr>=2.8.7
+strsimpy>=0.2.1
+
 faiss-cpu
-# accelerate
-# spacy
+# accelerate>=0.24.1
+# spacy>=3.7.2
 # PyMuPDF==1.22.5 # install if need pdf
 # rapidocr_onnxruntime>=1.3.2 # install if need pdf
 
@@ -26,18 +24,18 @@ pathlib
 pytest
 # scikit-learn
 # numexpr
-# vllm==0.1.7; sys_platform == "linux"
+# vllm==0.2.2; sys_platform == "linux"
 
 # online api libs
-zhipuai
-dashscope>=1.10.0 # qwen
-# qianfan
+
+zhipuai>=1.0.7 # zhipu
+# dashscope>=1.10.0 # qwen
 # volcengine>=1.0.106 # fangzhou
 
 # uncomment libs if you want to use corresponding vector store
 # pymilvus==2.1.3 # requires milvus==2.1.3
 # psycopg2
-# pgvector
+# pgvector>=0.2.4
 
 numpy~=1.24.4
 pandas~=2.0.3
@@ -50,13 +48,15 @@ httpx~=0.24.1
 watchdog
 tqdm
 websockets
+einops>=0.7.0
+
 # tiktoken
-einops
-# scipy
+# scipy>=1.11.4
 # transformers_stream_generator==0.0.4
 
-# search engine libs
-duckduckgo-search
-metaphor-python
-strsimpy
-markdownify
+# Agent and Search Tools
+
+arxiv>=2.0.0
+youtube-search>=2.1.2
+duckduckgo-search>=4.9.3
+metaphor-python>=0.1.23
