--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -5,7 +5,7 @@ langchain-experimental>=0.0.42
 pydantic==1.10.13
 fschat>=0.2.33
 xformers>=0.0.22.post7
-openai>=1.3.6
+openai>=1.3.7
 sentence_transformers
 transformers>=4.35.2
 torch==2.1.0  ##on Windows system, install the cuda version manually from https://pytorch.org/
@@ -37,6 +37,7 @@ pandas~=2.0.3
 einops>=0.7.0
 transformers_stream_generator==0.0.4
 vllm==0.2.2; sys_platform == "linux"
+httpx[brotli,http2,socks]>=0.25.2
 
 
 # Online api libs dependencies
@@ -53,5 +54,5 @@ vllm==0.2.2; sys_platform == "linux"
 
 arxiv>=2.0.0
 youtube-search>=2.1.2
-duckduckgo-search>=4.9.3
+duckduckgo-search>=3.9.9
 metaphor-python>=0.1.23
