--- a/requirements_api.txt
+++ b/requirements_api.txt
@@ -40,6 +40,13 @@ vllm==0.2.2; sys_platform == "linux"
 httpx[brotli,http2,socks]>=0.25.2
 
 
+# optional document loaders
+# rapidocr_paddle[gpu] # gpu accelleration for ocr of pdf and image files
+# jq # for .json and .jsonl files. suggest `conda install jq` on windows
+# html2text # for .enex files
+# beautifulsoup4 # for .mhtml files
+# pysrt # for .srt files
+
 # Online api libs dependencies
 
 # zhipuai>=1.0.7
