--- a/configs/prompt_config.py.example
+++ b/configs/prompt_config.py.example
@@ -1,26 +1,19 @@
-# prompt模板使用Jinja2语法，简单点就是用双大括号代替f-string的单大括号
-# 本配置文件支持热加载，修改prompt模板后无需重启服务。
-
-# LLM对话支持的变量：
-#   - input: 用户输入内容
-
-# 知识库和搜索引擎对话支持的变量：
-#   - context: 从检索结果拼接的知识文本
-#   - question: 用户提出的问题
-
-# Agent对话支持的变量：
-
-#   - tools: 可用的工具列表
-#   - tool_names: 可用的工具名称列表
-#   - history: 用户和Agent的对话历史
-#   - input: 用户输入内容
-#   - agent_scratchpad: Agent的思维记录
-
 PROMPT_TEMPLATES = {
-    "llm_chat": {
+    "preprocess_model": {
+        "default":
+            '请你根据我的描述和我们对话的历史，来判断本次跟我交流是否需要使用工具，还是可以直接凭借你的知识或者历史记录跟我对话。你只要回答一个数字。1 或者 0，1代表需要使用工具，0代表不需要使用工具。\n'
+            '以下几种情况要使用工具,请返回1\n'
+            '1. 实时性的问题，例如天气，日期，地点等信息\n'
+            '2. 需要数学计算的问题\n'
+            '3. 需要查询数据，地点等精确数据\n'
+            '4. 需要行业知识的问题\n'
+            '<question>'
+            '{input}'
+            '</question>'
+    },
+    "llm_model": {
         "default":
             '{{ input }}',
-
         "with_history":
             'The following is a friendly conversation between a human and an AI. '
             'The AI is talkative and provides lots of specific details from its context. '
@@ -29,72 +22,42 @@ PROMPT_TEMPLATES = {
             '{history}\n'
             'Human: {input}\n'
             'AI:',
-
-        "py":
-            '你是一个聪明的代码助手，请你给我写出简单的py代码。 \n'
-            '{{ input }}',
     },
-
-
-    "knowledge_base_chat": {
-        "default":
-            '<指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 “根据已知信息无法回答该问题”，'
-            '不允许在答案中添加编造成分，答案请使用中文。 </指令>\n'
-            '<已知信息>{{ context }}</已知信息>\n'
-            '<问题>{{ question }}</问题>\n',
-
-        "text":
-            '<指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 “根据已知信息无法回答该问题”，答案请使用中文。 </指令>\n'
-            '<已知信息>{{ context }}</已知信息>\n'
-            '<问题>{{ question }}</问题>\n',
-
-        "empty":  # 搜不到知识库的时候使用
-            '请你回答我的问题:\n'
-            '{{ question }}\n\n',
-    },
-
-
-    "search_engine_chat": {
-        "default":
-            '<指令>这是我搜索到的互联网信息，请你根据这些信息进行提取并有调理，简洁的回答问题。'
-            '如果无法从中得到答案，请说 “无法搜索到能回答问题的内容”。 </指令>\n'
-            '<已知信息>{{ context }}</已知信息>\n'
-            '<问题>{{ question }}</问题>\n',
-
-        "search":
-            '<指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 “根据已知信息无法回答该问题”，答案请使用中文。 </指令>\n'
-            '<已知信息>{{ context }}</已知信息>\n'
-            '<问题>{{ question }}</问题>\n',
-    },
-
-
-    "agent_chat": {
-        "default":
-            'Answer the following questions as best you can. If it is in order, you can use some tools appropriately. '
-            'You have access to the following tools:\n\n'
-            '{tools}\n\n'
-            'Use the following format:\n'
-            'Question: the input question you must answer1\n'
-            'Thought: you should always think about what to do and what tools to use.\n'
-            'Action: the action to take, should be one of [{tool_names}]\n'
-            'Action Input: the input to the action\n'
+    "action_model": {
+        "GPT-4":
+            'Answer the following questions as best you can. You have access to the following tools:\n'
+            'The way you use the tools is by specifying a json blob.\n'
+            'Specifically, this json should have a `action` key (with the name of the tool to use) and a `action_input` key (with the input to the tool going here).\n'
+            'The only values that should be in the "action" field are: {tool_names}\n'
+            'The $JSON_BLOB should only contain a SINGLE action, do NOT return a list of multiple actions. Here is an example of a valid $JSON_BLOB:\n'
+            '```\n\n'
+            '{{{{\n'
+            '  "action": $TOOL_NAME,\n'
+            '  "action_input": $INPUT\n'
+            '}}}}\n'
+            '```\n\n'
+            'ALWAYS use the following format:\n'
+            'Question: the input question you must answer\n'
+            'Thought: you should always think about what to do\n'
+            'Action:\n'
+            '```\n\n'
+            '$JSON_BLOB'
+            '```\n\n'
             'Observation: the result of the action\n'
-            '... (this Thought/Action/Action Input/Observation can be repeated zero or more times)\n'
+            '... (this Thought/Action/Observation can repeat N times)\n'
             'Thought: I now know the final answer\n'
             'Final Answer: the final answer to the original input question\n'
-            'Begin!\n\n'
-            'history: {history}\n\n'
-            'Question: {input}\n\n'
-            'Thought: {agent_scratchpad}\n',
-
+            'Begin! Reminder to always use the exact characters `Final Answer` when responding.\n'
+            'history: {history}\n'
+            'Question:{input}\n'
+            'Thought:{agent_scratchpad}\n',
         "ChatGLM3":
-            'You can answer using the tools, or answer directly using your knowledge without using the tools. '
-            'Respond to the human as helpfully and accurately as possible.\n'
+            'You can answer using the tools.Respond to the human as helpfully and accurately as possible.\n'
             'You have access to the following tools:\n'
             '{tools}\n'
-            'Use a json blob to specify a tool by providing an action key (tool name) '
+            'Use a json blob to specify a tool by providing an action key (tool name)\n'
             'and an action_input key (tool input).\n'
-            'Valid "action" values: "Final Answer" or  [{tool_names}]'
+            'Valid "action" values: "Final Answer" or  [{tool_names}]\n'
             'Provide only ONE action per $JSON_BLOB, as shown:\n\n'
             '```\n'
             '{{{{\n'
@@ -118,10 +81,13 @@ PROMPT_TEMPLATES = {
             '  "action": "Final Answer",\n'
             '  "action_input": "Final response to human"\n'
             '}}}}\n'
-            'Begin! Reminder to ALWAYS respond with a valid json blob of a single action. Use tools if necessary. '
+            'Begin! Reminder to ALWAYS respond with a valid json blob of a single action. Use tools if necessary.\n'
             'Respond directly if appropriate. Format is Action:```$JSON_BLOB```then Observation:.\n'
             'history: {history}\n\n'
             'Question: {input}\n\n'
-            'Thought: {agent_scratchpad}',
+            'Thought: {agent_scratchpad}\n',
+    },
+    "postprocess_model": {
+        "default": "{{input}}",
     }
 }
