--- a/configs/model_config.py.example
+++ b/configs/model_config.py.example
@@ -1,14 +1,6 @@
 import os
-
-# 可以指定一个绝对路径，统一存放所有的Embedding和LLM模型。
-# 每个模型可以是一个单独的目录，也可以是某个目录下的二级子目录。
-# 如果模型目录名称和 MODEL_PATH 中的 key 或 value 相同，程序会自动检测加载，无需修改 MODEL_PATH 中的路径。
 MODEL_ROOT_PATH = ""
-
-# 选用的 Embedding 名称
-EMBEDDING_MODEL = "bge-large-zh-v1.5"
-
-# Embedding 模型运行设备。设为 "auto" 会自动检测(会有警告)，也可手动设定为 "cuda","mps","cpu","xpu" 其中之一。
+EMBEDDING_MODEL = "bge-large-zh-v1.5"  # bge-large-zh
 EMBEDDING_DEVICE = "auto"
 
 # 选用的reranker模型
@@ -21,65 +13,170 @@ RERANKER_MAX_LENGTH = 1024
 EMBEDDING_KEYWORD_FILE = "keywords.txt"
 EMBEDDING_MODEL_OUTPUT_PATH = "output"
 
-# 要运行的 LLM 名称，可以包括本地模型和在线模型。列表中本地模型将在启动项目时全部加载。
-# 列表中第一个模型将作为 API 和 WEBUI 的默认模型。
-# 在这里，我们使用目前主流的两个离线模型，其中，chatglm3-6b 为默认加载模型。
-# 如果你的显存不足，可使用 Qwen-1_8B-Chat, 该模型 FP16 仅需 3.8G显存。
+LLM_MODEL_CONFIG = {
+    # 意图识别不需要输出，模型后台知道就行
+    "preprocess_model": {
+        "zhipu-api": {
+            "temperature": 0.4,
+            "max_tokens": 2048,
+            "history_len": 100,
+            "prompt_name": "default",
+            "callbacks": False
+        },
+    },
+    "llm_model": {
+        "chatglm3-6b": {
+            "temperature": 0.9,
+            "max_tokens": 4096,
+            "history_len": 3,
+            "prompt_name": "default",
+            "callbacks": True
+        },
+        "zhipu-api": {
+            "temperature": 0.9,
+            "max_tokens": 4000,
+            "history_len": 5,
+            "prompt_name": "default",
+            "callbacks": True
+        },
+        "Qwen-1_8B-Chat": {
+            "temperature": 0.4,
+            "max_tokens": 2048,
+            "history_len": 100,
+            "prompt_name": "default",
+            "callbacks": False
+        },
+    },
+    "action_model": {
+        "chatglm3-6b": {
+            "temperature": 0.01,
+            "max_tokens": 4096,
+            "prompt_name": "ChatGLM3",
+            "callbacks": True
+        },
+        "zhipu-api": {
+            "temperature": 0.01,
+            "max_tokens": 2096,
+            "history_len": 5,
+            "prompt_name": "ChatGLM3",
+            "callbacks": True
+        },
+    },
+    "postprocess_model": {
+        "chatglm3-6b": {
+            "temperature": 0.01,
+            "max_tokens": 4096,
+            "prompt_name": "default",
+            "callbacks": True
+        }
+    },
 
-LLM_MODELS = ["chatglm3-6b", "zhipu-api", "openai-api"]
-Agent_MODEL = None
+}
+
+TOOL_CONFIG = {
+    "search_local_knowledgebase": {
+        "use": True,
+        "top_k": 10,
+        "score_threshold": 1,
+        "conclude_prompt": {
+            "with_result":
+                '<指令>根据已知信息，简洁和专业的来回答问题。如果无法从中得到答案，请说 "根据已知信息无法回答该问题"，'
+                '不允许在答案中添加编造成分，答案请使用中文。 </指令>\n'
+                '<已知信息>{{ context }}</已知信息>\n'
+                '<问题>{{ question }}</问题>\n',
+            "without_result":
+                '请你根据我的提问回答我的问题:\n'
+                '{{ question }}\n'
+                '请注意，你必须在回答结束后强调，你的回答是根据你的经验回答而不是参考资料回答的。\n',
+        }
+    },
+    "search_internet": {
+        "use": True,
+        "search_engine_name": "bing",
+        "search_engine_config":
+            {
+                "bing": {
+                    "result_len": 3,
+                    "bing_search_url": "https://api.bing.microsoft.com/v7.0/search",
+                    "bing_key": "",
+                },
+                "metaphor": {
+                    "result_len": 3,
+                    "metaphor_api_key": "",
+                    "split_result": False,
+                    "chunk_size": 500,
+                    "chunk_overlap": 0,
+                },
+                "duckduckgo": {
+                    "result_len": 3
+                }
+            },
+        "top_k": 10,
+        "verbose": "Origin",
+        "conclude_prompt":
+            "<指令>这是搜索到的互联网信息，请你根据这些信息进行提取并有调理，简洁的回答问题。如果无法从中得到答案，请说 “无法搜索到能回答问题的内容”。 "
+            "</指令>\n<已知信息>{{ context }}</已知信息>\n"
+            "<问题>\n"
+            "{{ question }}\n"
+            "</问题>\n"
+    },
+    "arxiv": {
+        "use": True,
+    },
+    "shell": {
+        "use": True,
+    },
+    "weather_check": {
+        "use": True,
+        "api-key": "",
+    },
+    "search_youtube": {
+        "use": False,
+    },
+    "wolfram": {
+        "use": False,
+    },
+    "calculate": {
+        "use": False,
+    },
+
+}
 
 # LLM 模型运行设备。设为"auto"会自动检测(会有警告)，也可手动设定为 "cuda","mps","cpu","xpu" 其中之一。
 LLM_DEVICE = "auto"
 
-HISTORY_LEN = 3
-
-MAX_TOKENS = 2048
-
-TEMPERATURE = 0.7
-
 ONLINE_LLM_MODEL = {
     "openai-api": {
-        "model_name": "gpt-4",
+        "model_name": "gpt-4-1106-preview",
         "api_base_url": "https://api.openai.com/v1",
         "api_key": "",
         "openai_proxy": "",
     },
-
-    # 智谱AI API,具体注册及api key获取请前往 http://open.bigmodel.cn
     "zhipu-api": {
         "api_key": "",
-        "version": "glm-4",
+        "version": "chatglm_turbo",
         "provider": "ChatGLMWorker",
     },
-
-    # 具体注册及api key获取请前往 https://api.minimax.chat/
     "minimax-api": {
         "group_id": "",
         "api_key": "",
         "is_pro": False,
         "provider": "MiniMaxWorker",
     },
-
-    # 具体注册及api key获取请前往 https://xinghuo.xfyun.cn/
     "xinghuo-api": {
         "APPID": "",
         "APISecret": "",
         "api_key": "",
-        "version": "v3.5", # 你使用的讯飞星火大模型版本，可选包括 "v3.5","v3.0", "v2.0", "v1.5"
+        "version": "v3.0",
         "provider": "XingHuoWorker",
     },
-
-    # 百度千帆 API，申请方式请参考 https://cloud.baidu.com/doc/WENXINWORKSHOP/s/4lilb2lpf
     "qianfan-api": {
-        "version": "ERNIE-Bot",  # 注意大小写。当前支持 "ERNIE-Bot" 或 "ERNIE-Bot-turbo"， 更多的见官方文档。
-        "version_url": "",  # 也可以不填写version，直接填写在千帆申请模型发布的API地址
+        "version": "ernie-bot-4",
+        "version_url": "",
         "api_key": "",
         "secret_key": "",
         "provider": "QianFanWorker",
     },
-
-    # 火山方舟 API，文档参考 https://www.volcengine.com/docs/82379
     "fangzhou-api": {
         "version": "chatglm-6b-model",
         "version_url": "",
@@ -87,28 +184,22 @@ ONLINE_LLM_MODEL = {
         "secret_key": "",
         "provider": "FangZhouWorker",
     },
-
-    # 阿里云通义千问 API，文档参考 https://help.aliyun.com/zh/dashscope/developer-reference/api-details
     "qwen-api": {
         "version": "qwen-max",
         "api_key": "",
         "provider": "QwenWorker",
         "embed_model": "text-embedding-v1"  # embedding 模型名称
     },
-
-    # 百川 API，申请方式请参考 https://www.baichuan-ai.com/home#api-enter
     "baichuan-api": {
         "version": "Baichuan2-53B",
         "api_key": "",
         "secret_key": "",
         "provider": "BaiChuanWorker",
     },
-
-    # Azure API
     "azure-api": {
-        "deployment_name": "",  # 部署容器的名字
-        "resource_name": "",  # https://{resource_name}.openai.azure.com/openai/ 填写resource_name的部分，其他部分不要填写
-        "api_version": "",  # API的版本，不是模型版本
+        "deployment_name": "",
+        "resource_name": "",
+        "api_version": "2023-07-01-preview",
         "api_key": "",
         "provider": "AzureWorker",
     },
@@ -153,50 +244,33 @@ MODEL_PATH = {
 
         "bge-small-zh": "BAAI/bge-small-zh",
         "bge-base-zh": "BAAI/bge-base-zh",
-        "bge-large-zh": "BAAI/bge-large-zh",
+        "bge-large-zh": "/media/zr/Data/Models/Embedding/bge-large-zh",
         "bge-large-zh-noinstruct": "BAAI/bge-large-zh-noinstruct",
         "bge-base-zh-v1.5": "BAAI/bge-base-zh-v1.5",
-        "bge-large-zh-v1.5": "BAAI/bge-large-zh-v1.5",
-
-        "bge-m3": "BAAI/bge-m3",
-
+        "bge-large-zh-v1.5": "/Models/bge-large-zh-v1.5",
         "piccolo-base-zh": "sensenova/piccolo-base-zh",
         "piccolo-large-zh": "sensenova/piccolo-large-zh",
-        "nlp_gte_sentence-embedding_chinese-large": "damo/nlp_gte_sentence-embedding_chinese-large",
-        "text-embedding-ada-002": "your OPENAI_API_KEY",
+        "nlp_gte_sentence-embedding_chinese-large": "/Models/nlp_gte_sentence-embedding_chinese-large",
+        "text-embedding-ada-002": "Just write your OpenAI key like "sk-o3IGBhC9g8AiFvTGWVKsT*****" ",
     },
 
     "llm_model": {
         "chatglm2-6b": "THUDM/chatglm2-6b",
         "chatglm2-6b-32k": "THUDM/chatglm2-6b-32k",
-        "chatglm3-6b": "THUDM/chatglm3-6b",
+        "chatglm3-6b": "/Models/chatglm3-6b",
         "chatglm3-6b-32k": "THUDM/chatglm3-6b-32k",
 
-        "Orion-14B-Chat": "OrionStarAI/Orion-14B-Chat",
-        "Orion-14B-Chat-Plugin": "OrionStarAI/Orion-14B-Chat-Plugin",
-        "Orion-14B-LongChat": "OrionStarAI/Orion-14B-LongChat",
+        "Yi-34B-Chat": "/data/share/models/Yi-34B-Chat",
+        "BlueLM-7B-Chat": "/Models/BlueLM-7B-Chat",
 
-        "Llama-2-7b-chat-hf": "meta-llama/Llama-2-7b-chat-hf",
-        "Llama-2-13b-chat-hf": "meta-llama/Llama-2-13b-chat-hf",
-        "Llama-2-70b-chat-hf": "meta-llama/Llama-2-70b-chat-hf",
+        "baichuan2-13b": "/media/zr/Data/Models/LLM/Baichuan2-13B-Chat",
+        "baichuan2-7b": "/media/zr/Data/Models/LLM/Baichuan2-7B-Chat",
+        "baichuan-7b": "baichuan-inc/Baichuan-7B",
+        "baichuan-13b": "baichuan-inc/Baichuan-13B",
+        'baichuan-13b-chat': 'baichuan-inc/Baichuan-13B-Chat',
 
-        "Qwen-1_8B-Chat": "Qwen/Qwen-1_8B-Chat",
-        "Qwen-7B-Chat": "Qwen/Qwen-7B-Chat",
-        "Qwen-14B-Chat": "Qwen/Qwen-14B-Chat",
-        "Qwen-72B-Chat": "Qwen/Qwen-72B-Chat",
-
-        # Qwen1.5 模型 VLLM可能出现问题
-        "Qwen1.5-0.5B-Chat": "Qwen/Qwen1.5-0.5B-Chat",
-        "Qwen1.5-1.8B-Chat": "Qwen/Qwen1.5-1.8B-Chat",
-        "Qwen1.5-4B-Chat": "Qwen/Qwen1.5-4B-Chat",
-        "Qwen1.5-7B-Chat": "Qwen/Qwen1.5-7B-Chat",
-        "Qwen1.5-14B-Chat": "Qwen/Qwen1.5-14B-Chat",
-        "Qwen1.5-72B-Chat": "Qwen/Qwen1.5-72B-Chat",
-
-        "baichuan-7b-chat": "baichuan-inc/Baichuan-7B-Chat",
-        "baichuan-13b-chat": "baichuan-inc/Baichuan-13B-Chat",
-        "baichuan2-7b-chat": "baichuan-inc/Baichuan2-7B-Chat",
-        "baichuan2-13b-chat": "baichuan-inc/Baichuan2-13B-Chat",
+        "aquila-7b": "BAAI/Aquila-7B",
+        "aquilachat-7b": "BAAI/AquilaChat-7B",
 
         "internlm-7b": "internlm/internlm-7b",
         "internlm-chat-7b": "internlm/internlm-chat-7b",
@@ -235,42 +309,43 @@ MODEL_PATH = {
         "oasst-sft-4-pythia-12b-epoch-3.5": "OpenAssistant/oasst-sft-4-pythia-12b-epoch-3.5",
         "dolly-v2-12b": "databricks/dolly-v2-12b",
         "stablelm-tuned-alpha-7b": "stabilityai/stablelm-tuned-alpha-7b",
+
+        "Llama-2-13b-hf": "meta-llama/Llama-2-13b-hf",
+        "Llama-2-70b-hf": "meta-llama/Llama-2-70b-hf",
+        "open_llama_13b": "openlm-research/open_llama_13b",
+        "vicuna-13b-v1.3": "lmsys/vicuna-13b-v1.3",
+        "koala": "young-geng/koala",
+
+        "mpt-7b": "mosaicml/mpt-7b",
+        "mpt-7b-storywriter": "mosaicml/mpt-7b-storywriter",
+        "mpt-30b": "mosaicml/mpt-30b",
+        "opt-66b": "facebook/opt-66b",
+        "opt-iml-max-30b": "facebook/opt-iml-max-30b",
+
+        "Qwen-1_8B-Chat":"Qwen/Qwen-1_8B-Chat"
+        "Qwen-7B": "Qwen/Qwen-7B",
+        "Qwen-14B": "Qwen/Qwen-14B",
+        "Qwen-7B-Chat": "Qwen/Qwen-7B-Chat",
+        "Qwen-14B-Chat": "Qwen/Qwen-14B-Chat",
+        "Qwen-14B-Chat-Int8": "Qwen/Qwen-14B-Chat-Int8",  # 确保已经安装了auto-gptq optimum flash-attn
+        "Qwen-14B-Chat-Int4": "/media/zr/Data/Models/LLM/Qwen-14B-Chat-Int4",  # 确保已经安装了auto-gptq optimum flash-attn
     },
 
-    "reranker": {
-        "bge-reranker-large": "BAAI/bge-reranker-large",
-        "bge-reranker-base": "BAAI/bge-reranker-base",
-    }
-}
-
-# 通常情况下不需要更改以下内容
-
-# nltk 模型存储路径
 NLTK_DATA_PATH = os.path.join(os.path.dirname(os.path.dirname(__file__)), "nltk_data")
 
 # 使用VLLM可能导致模型推理能力下降，无法完成Agent任务
 VLLM_MODEL_DICT = {
-    "chatglm2-6b": "THUDM/chatglm2-6b",
-    "chatglm2-6b-32k": "THUDM/chatglm2-6b-32k",
-    "chatglm3-6b": "THUDM/chatglm3-6b",
-    "chatglm3-6b-32k": "THUDM/chatglm3-6b-32k",
+    "aquila-7b": "BAAI/Aquila-7B",
+    "aquilachat-7b": "BAAI/AquilaChat-7B",
 
-    "Llama-2-7b-chat-hf": "meta-llama/Llama-2-7b-chat-hf",
-    "Llama-2-13b-chat-hf": "meta-llama/Llama-2-13b-chat-hf",
-    "Llama-2-70b-chat-hf": "meta-llama/Llama-2-70b-chat-hf",
+    "baichuan-7b": "baichuan-inc/Baichuan-7B",
+    "baichuan-13b": "baichuan-inc/Baichuan-13B",
+    'baichuan-13b-chat': 'baichuan-inc/Baichuan-13B-Chat',
 
-    "Qwen-1_8B-Chat": "Qwen/Qwen-1_8B-Chat",
-    "Qwen-7B-Chat": "Qwen/Qwen-7B-Chat",
-    "Qwen-14B-Chat": "Qwen/Qwen-14B-Chat",
-    "Qwen-72B-Chat": "Qwen/Qwen-72B-Chat",
-
-    "baichuan-7b-chat": "baichuan-inc/Baichuan-7B-Chat",
-    "baichuan-13b-chat": "baichuan-inc/Baichuan-13B-Chat",
-    "baichuan2-7b-chat": "baichuan-inc/Baichuan-7B-Chat",
-    "baichuan2-13b-chat": "baichuan-inc/Baichuan-13B-Chat",
-
-    "BlueLM-7B-Chat": "vivo-ai/BlueLM-7B-Chat",
-    "BlueLM-7B-Chat-32k": "vivo-ai/BlueLM-7B-Chat-32k",
+    'chatglm2-6b': 'THUDM/chatglm2-6b',
+    'chatglm2-6b-32k': 'THUDM/chatglm2-6b-32k',
+    'chatglm3-6b': 'THUDM/chatglm3-6b',
+    'chatglm3-6b-32k': 'THUDM/chatglm3-6b-32k',
 
     "internlm-7b": "internlm/internlm-7b",
     "internlm-chat-7b": "internlm/internlm-chat-7b",
@@ -301,14 +376,13 @@ VLLM_MODEL_DICT = {
     "opt-66b": "facebook/opt-66b",
     "opt-iml-max-30b": "facebook/opt-iml-max-30b",
 
-}
+    "Qwen-7B": "Qwen/Qwen-7B",
+    "Qwen-14B": "Qwen/Qwen-14B",
+    "Qwen-7B-Chat": "Qwen/Qwen-7B-Chat",
+    "Qwen-14B-Chat": "Qwen/Qwen-14B-Chat",
 
-SUPPORT_AGENT_MODEL = [
-    "openai-api",  # GPT4 模型
-    "qwen-api",  # Qwen Max模型
-    "zhipu-api",  # 智谱AI GLM4模型
-    "Qwen",  # 所有Qwen系列本地模型
-    "chatglm3-6b",
-    "internlm2-chat-20b",
-    "Orion-14B-Chat-Plugin",
-]
+    "agentlm-7b": "THUDM/agentlm-7b",
+    "agentlm-13b": "THUDM/agentlm-13b",
+    "agentlm-70b": "THUDM/agentlm-70b",
+
+}
