--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,12 @@ langchain-experimental>=0.0.42
 pydantic==1.10.13
 fschat>=0.2.33
 xformers>=0.0.22.post7
-openai>=1.3.7
 sentence_transformers
 transformers>=4.35.2
 torch==2.1.0  ##on Windows system, install the cuda version manually from https://pytorch.org/
 torchvision  #on Windows system, install the cuda version manually from https://pytorch.org/
 torchaudio  #on Windows system, install the cuda version manually from https://pytorch.org/
+openai>=1.3.7
 fastapi>=0.104
 sse_starlette
 nltk>=3.8.1
@@ -38,21 +38,23 @@ pandas~=2.0.3
 einops>=0.7.0
 transformers_stream_generator==0.0.4
 vllm==0.2.2; sys_platform == "linux"
+httpx[brotli,http2,socks]>=0.25.2
 
 # optional document loaders
 # rapidocr_paddle[gpu] # gpu accelleration for ocr of pdf and image files
-# jq # for .json and .jsonl files. suggest `conda install jq` on windows
+jq # for .json and .jsonl files. suggest `conda install jq` on windows
 # html2text # for .enex files
 # beautifulsoup4 # for .mhtml files
 # pysrt # for .srt files
 
 # Online api libs dependencies
 
-# zhipuai>=1.0.7
-# dashscope>=1.10.0
-# qianfan>=0.2.0
-# volcengine>=1.0.106
-# pymilvus>=2.3.3
+# zhipuai>=1.0.7 # zhipu
+# dashscope>=1.10.0 # qwen
+# volcengine>=1.0.106 # fangzhou
+
+# uncomment libs if you want to use corresponding vector store
+# pymilvus==2.1.3 # requires milvus==2.1.3
 # psycopg2
 # pgvector>=0.2.4
 
@@ -67,10 +69,8 @@ metaphor-python>=0.1.23
 
 streamlit>=1.29.0 # do remember to add streamlit to environment variables if you use windows
 streamlit-option-menu>=0.3.6
-streamlit-antd-components>=0.2.3
 streamlit-chatbox>=1.1.11
 streamlit-modal>=0.1.0
 streamlit-aggrid>=0.3.4.post3
-httpx[brotli,http2,socks]>=0.25.2
 watchdog>=3.0.0
 
