--- a/requirements_lite.txt
+++ b/requirements_lite.txt
@@ -1,42 +1,56 @@
+# API requirements
+
 langchain==0.0.344
+langchain-experimental>=0.0.42
 pydantic==1.10.13
 fschat>=0.2.33
+# xformers>=0.0.22.post7
+# sentence_transformers
+# transformers>=4.35.2
+# torch==2.1.0  ##on Windows system, install the cuda version manually from https://pytorch.org/
+# torchvision  #on Windows system, install the cuda version manually from https://pytorch.org/
+# torchaudio  #on Windows system, install the cuda version manually from https://pytorch.org/
 openai>=1.3.7
-fastapi>=0.104.1
-python-multipart
-nltk~=3.8.1
+fastapi>=0.104
+sse_starlette
+nltk>=3.8.1
 uvicorn>=0.24.0.post1
 starlette~=0.27.0
 unstructured[docx,csv]==0.11.0 # add pdf if need
 python-magic-bin; sys_platform == 'win32'
 SQLAlchemy==2.0.19
-numexpr>=2.8.7
-strsimpy>=0.2.1
-
-faiss-cpu
+faiss-cpu # `conda install faiss-gpu -c conda-forge` if you want to accelerate with gpus
 # accelerate>=0.24.1
 # spacy>=3.7.2
-# PyMuPDF==1.22.5 # install if need pdf
-# rapidocr_onnxruntime>=1.3.2 # install if need pdf
+# PyMuPDF
+# rapidocr_onnxruntime
+requests>=2.31.0
+pathlib>=1.0.1
+pytest>=7.4.3
+numexpr>=2.8.7
+strsimpy>=0.2.1
+markdownify>=0.11.6
+# tiktoken>=0.5.1
+tqdm>=4.66.1
+websockets
+numpy~=1.24.4
+pandas~=2.0.3
+# einops>=0.7.0
+# transformers_stream_generator==0.0.4
+# vllm==0.2.2; sys_platform == "linux"
+httpx[brotli,http2,socks]>=0.25.2
 
 # optional document loaders
 # rapidocr_paddle[gpu] # gpu accelleration for ocr of pdf and image files
-# jq # for .json and .jsonl files. suggest `conda install jq` on windows
+jq # for .json and .jsonl files. suggest `conda install jq` on windows
 # html2text # for .enex files
 # beautifulsoup4 # for .mhtml files
 # pysrt # for .srt files
 
-requests
-pathlib
-pytest
-# scikit-learn
-# numexpr
-# vllm==0.2.2; sys_platform == "linux"
-
-# online api libs
+# Online api libs dependencies
 
 zhipuai>=1.0.7 # zhipu
-# dashscope>=1.10.0 # qwen
+dashscope>=1.10.0 # qwen
 # volcengine>=1.0.106 # fangzhou
 
 # uncomment libs if you want to use corresponding vector store
@@ -44,27 +58,19 @@ zhipuai>=1.0.7 # zhipu
 # psycopg2
 # pgvector>=0.2.4
 
-numpy~=1.24.4
-pandas~=2.0.3
-streamlit>=1.29.0
-streamlit-option-menu>=0.3.6
-streamlit-antd-components>=0.2.3
-streamlit-chatbox>=1.1.11
-streamlit-modal>=0.1.0
-streamlit-aggrid>=0.3.4.post3
-httpx[brotli,http2,socks]>=0.25.2
-watchdog>=3.0.0
-tqdm>=4.66.1
-websockets
-einops>=0.7.0
-
-# tiktoken
-# scipy>=1.11.4
-# transformers_stream_generator==0.0.4
-
 # Agent and Search Tools
 
 arxiv>=2.0.0
 youtube-search>=2.1.2
 duckduckgo-search>=3.9.9
 metaphor-python>=0.1.23
+
+# WebUI requirements
+
+streamlit>=1.29.0 # do remember to add streamlit to environment variables if you use windows
+streamlit-option-menu>=0.3.6
+streamlit-chatbox>=1.1.11
+streamlit-modal>=0.1.0
+streamlit-aggrid>=0.3.4.post3
+watchdog>=3.0.0
+
