--- a/requirements_webui.txt
+++ b/requirements_webui.txt
@@ -1,10 +1,9 @@
 # WebUI requirements
 
-streamlit>=1.29.0
+streamlit>=1.29.0 # do remember to add streamlit to environment variables if you use windows
 streamlit-option-menu>=0.3.6
-streamlit-antd-components>=0.2.3
 streamlit-chatbox>=1.1.11
 streamlit-modal>=0.1.0
 streamlit-aggrid>=0.3.4.post3
-httpx[brotli,http2,socks]>=0.25.2
 watchdog>=3.0.0
+
