--- a/configs/prompt_config.py.example
+++ b/configs/prompt_config.py.example
@@ -86,6 +86,22 @@ PROMPT_TEMPLATES = {
             'history: {history}\n\n'
             'Question: {input}\n\n'
             'Thought: {agent_scratchpad}\n',
+        "qwen":
+            'Answer the following question as best you can. You have access to the following APIs:\n\n'
+            '{tools}\n\n'
+            'Use the following format:\n\n'
+            'Question: the input question you must answer\n'
+            'Thought: you should always think about what to do\n'
+            'Action: the action to take, should be one of [{tool_names}]\n'
+            'Action Input: the input to the action\n'
+            'Observation: the result of the action\n'
+            '... (this Thought/Action/Action Input/Observation can be repeated zero or more times)\n'
+            'Thought: I now know the final answer\n'
+            'Final Answer: the final answer to the original input question\n\n'
+            'Format the Action Input as a JSON object.\n\n'
+            'Begin!\n\n'
+            'Question: {input}\n\n'
+            '{agent_scratchpad}\n\n',
     },
     "postprocess_model": {
         "default": "{{input}}",
